Deployment/service-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1
  labels:
    app: service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: service-1
        image: ghcr.io/interviewandhealth/k8s-test/service-1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  type: NodePort
  selector:
    app: service-1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    nodePort: 30001
