Deployment/service-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-2
  labels:
    app: service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-2
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
      - name: service-2
        image: gopalsaraf/service2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: service-2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
